started rss front end, and fixed word wrap on blog hom and user posts

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -1,6 +1,6 @@
 body {
     background: #fafafa;
-    color: #333333;
+    color: #000000;
     margin-top: 5rem;
   }
   
@@ -36,23 +36,39 @@ ul {
   margin-bottom: 20px;
 }
 
+.pag_button {
+  background: #ffffff;
+  padding: 5px 10px;
+  border: 1px solid #dddddd;
+  margin-bottom: 20px;
+}
+
+.pag_button_selected {
+  background: #ffffff;
+  padding: 5px 10px;
+  border: 1px solid #f61;
+  margin-bottom: 20px;
+}
+
 .article-title {
-  color: #f61;
+  color: rgb(0, 0, 0);
 }
 
 a.article-title:hover {
-  color: rgb(197, 69, 0);
+  color: #f61;
   text-decoration: none;
 }
 
 .article-content {
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 
 .article-img {
   height: 65px;
   width: 65px;
   margin-right: 16px;
+  border: #f61;
+  border-radius: 5px;
 }
 
 .article-metadata {
@@ -62,7 +78,7 @@ a.article-title:hover {
 }
 
 .article-metadata a:hover {
-  color: #333;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
@@ -99,5 +115,10 @@ a:hover {
 a:visited {
   color: rgba(255, 100, 17, 0.959);
 }
-  
+
+.sidebar-logo {
+  width: 100%;
+  height: auto;
+}
+
 
